[gd_scene load_steps=12 format=2]

[ext_resource path="res://default_theme.tres" type="Theme" id=1]
[ext_resource path="res://GameWindow.gd" type="Script" id=2]
[ext_resource path="res://calibri/calibri_bolditalics.tres" type="DynamicFont" id=3]
[ext_resource path="res://calibri/calibri_bold.tres" type="DynamicFont" id=5]
[ext_resource path="res://Chat.gd" type="Script" id=6]
[ext_resource path="res://Players.gd" type="Script" id=7]
[ext_resource path="res://Info.gd" type="Script" id=8]
[ext_resource path="res://Decision2.ogg" type="AudioStream" id=9]
[ext_resource path="res://MusicDisplay.gd" type="Script" id=10]
[ext_resource path="res://bgm/[UNIB] Paradox Altar.ogg" type="AudioStream" id=11]
[ext_resource path="res://calibri/calibri_italics.tres" type="DynamicFont" id=12]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -6.10352e-05
theme = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
bus = "Music"

[node name="GameWindow" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="MusicDisplay" type="HBoxContainer" parent="GameWindow"]
margin_right = 1023.0
margin_bottom = 23.0
script = ExtResource( 10 )
__meta__ = {
"_edit_group_": true
}
music_node = NodePath("../../Music")

[node name="TrackName" type="Label" parent="GameWindow/MusicDisplay"]
visible = false
margin_top = 1.0
margin_right = 55.0
margin_bottom = 15.0
text = "No Track"

[node name="Timeline" type="HSlider" parent="GameWindow/MusicDisplay"]
margin_right = 128.0
margin_bottom = 16.0
rect_min_size = Vector2( 128, 0 )
editable = false
scrollable = false
tick_count = 10
ticks_on_borders = true

[node name="Time" type="Label" parent="GameWindow/MusicDisplay"]
margin_left = 132.0
margin_right = 219.0
margin_bottom = 23.0
text = "0:00/0:00"

[node name="HBoxContainer" type="HSplitContainer" parent="GameWindow"]
margin_top = 27.0
margin_right = 1023.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Chat" type="PanelContainer" parent="GameWindow/HBoxContainer"]
margin_right = 724.0
margin_bottom = 573.0
size_flags_horizontal = 3
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GameWindow/HBoxContainer/Chat"]
margin_left = 7.0
margin_top = 7.0
margin_right = 717.0
margin_bottom = 566.0

[node name="ColorRect" type="ColorRect" parent="GameWindow/HBoxContainer/Chat/VBoxContainer"]
margin_right = 710.0
margin_bottom = 522.0
size_flags_vertical = 11
color = Color( 0.145098, 0.145098, 0.145098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="GameWindow/HBoxContainer/Chat/VBoxContainer/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/bold_italics_font = ExtResource( 3 )
custom_fonts/italics_font = ExtResource( 12 )
custom_fonts/bold_font = ExtResource( 5 )
bbcode_enabled = true
bbcode_text = "Test [b]Test[/b] Test [i]Test[/i] Test [i][b]Test[/b][/i] Test"
text = "Test Test Test Test Test Test Test"
scroll_following = true
selection_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="GameWindow/HBoxContainer/Chat/VBoxContainer"]
margin_top = 526.0
margin_right = 710.0
margin_bottom = 559.0
size_flags_vertical = 9
max_length = 128
placeholder_text = "Type here..."
caret_blink = true
caret_blink_speed = 0.5

[node name="VBoxContainer" type="VSplitContainer" parent="GameWindow/HBoxContainer"]
margin_left = 736.0
margin_right = 1023.0
margin_bottom = 573.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4

[node name="Players" type="PanelContainer" parent="GameWindow/HBoxContainer/VBoxContainer"]
margin_right = 287.0
margin_bottom = 404.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="GameWindow/HBoxContainer/VBoxContainer/Players"]
margin_left = 7.0
margin_top = 7.0
margin_right = 280.0
margin_bottom = 397.0
fixed_icon_size = Vector2( 32, 32 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="PanelContainer" parent="GameWindow/HBoxContainer/VBoxContainer"]
margin_top = 416.0
margin_right = 287.0
margin_bottom = 573.0
script = ExtResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="GridContainer" type="GridContainer" parent="GameWindow/HBoxContainer/VBoxContainer/Info"]
margin_left = 7.0
margin_top = 7.0
margin_right = 280.0
margin_bottom = 150.0
columns = 2

[node name="PlayerLabel" type="Label" parent="GameWindow/HBoxContainer/VBoxContainer/Info/GridContainer"]
margin_right = 121.0
margin_bottom = 23.0
text = "Playername:"

[node name="PlayerName" type="Label" parent="GameWindow/HBoxContainer/VBoxContainer/Info/GridContainer"]
margin_left = 125.0
margin_right = 273.0
margin_bottom = 23.0
size_flags_horizontal = 3
text = "Player"

[node name="Label" type="Label" parent="GameWindow/HBoxContainer/VBoxContainer/Info/GridContainer"]
margin_top = 30.0
margin_right = 121.0
margin_bottom = 53.0
text = "Boop Button:"

[node name="Button" type="Button" parent="GameWindow/HBoxContainer/VBoxContainer/Info/GridContainer"]
margin_left = 125.0
margin_top = 27.0
margin_right = 273.0
margin_bottom = 56.0
text = "Boop"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="GameWindow/HBoxContainer/VBoxContainer/Info/GridContainer"]
margin_top = 63.0
margin_right = 121.0
margin_bottom = 86.0
text = "Play Music:"

[node name="PlayMusic" type="Button" parent="GameWindow/HBoxContainer/VBoxContainer/Info/GridContainer"]
margin_left = 125.0
margin_top = 60.0
margin_right = 273.0
margin_bottom = 89.0
text = "Music"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundsLabel" type="Label" parent="GameWindow/HBoxContainer/VBoxContainer/Info/GridContainer"]
margin_top = 93.0
margin_right = 121.0
margin_bottom = 116.0
text = "Sounds:"

[node name="SoundsSlider" type="HSlider" parent="GameWindow/HBoxContainer/VBoxContainer/Info/GridContainer"]
margin_left = 125.0
margin_top = 93.0
margin_right = 273.0
margin_bottom = 109.0
max_value = 1.0
step = 0.01
value = 1.0
tick_count = 11
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicLabel" type="Label" parent="GameWindow/HBoxContainer/VBoxContainer/Info/GridContainer"]
margin_top = 120.0
margin_right = 121.0
margin_bottom = 143.0
text = "Music:"

[node name="MusicSlider" type="HSlider" parent="GameWindow/HBoxContainer/VBoxContainer/Info/GridContainer"]
margin_left = 125.0
margin_top = 120.0
margin_right = 273.0
margin_bottom = 136.0
max_value = 1.0
step = 0.01
value = 1.0
tick_count = 11
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="GameWindow/HBoxContainer/VBoxContainer/Info"]
stream = ExtResource( 9 )
bus = "Sounds"

[node name="Login" type="CenterContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="Login"]
margin_left = 504.0
margin_top = 293.0
margin_right = 518.0
margin_bottom = 307.0

[node name="VBoxContainer" type="VBoxContainer" parent="Login/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 263.0
margin_bottom = 182.0

[node name="Label" type="Label" parent="Login/PanelContainer/VBoxContainer"]
margin_right = 256.0
margin_bottom = 23.0
text = "Connect to Server"
align = 1

[node name="HSeparator" type="HSeparator" parent="Login/PanelContainer/VBoxContainer"]
margin_top = 27.0
margin_right = 256.0
margin_bottom = 31.0
rect_min_size = Vector2( 256, 0 )

[node name="GridContainer" type="GridContainer" parent="Login/PanelContainer/VBoxContainer"]
margin_top = 35.0
margin_right = 256.0
margin_bottom = 142.0
columns = 2

[node name="NameLabel" type="Label" parent="Login/PanelContainer/VBoxContainer/GridContainer"]
margin_top = 5.0
margin_right = 102.0
margin_bottom = 28.0
text = "Name:"

[node name="PlayerName" type="LineEdit" parent="Login/PanelContainer/VBoxContainer/GridContainer"]
margin_left = 106.0
margin_right = 256.0
margin_bottom = 33.0
size_flags_horizontal = 3
max_length = 16
placeholder_text = "Player"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IPLabel" type="Label" parent="Login/PanelContainer/VBoxContainer/GridContainer"]
margin_top = 42.0
margin_right = 102.0
margin_bottom = 65.0
text = "IP Address:"

[node name="IPAddress" type="LineEdit" parent="Login/PanelContainer/VBoxContainer/GridContainer"]
margin_left = 106.0
margin_top = 37.0
margin_right = 256.0
margin_bottom = 70.0
size_flags_horizontal = 3
max_length = 16
placeholder_text = "127.0.0.1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PortLabel" type="Label" parent="Login/PanelContainer/VBoxContainer/GridContainer"]
margin_top = 79.0
margin_right = 102.0
margin_bottom = 102.0
text = "Port:"

[node name="Port" type="LineEdit" parent="Login/PanelContainer/VBoxContainer/GridContainer"]
margin_left = 106.0
margin_top = 74.0
margin_right = 256.0
margin_bottom = 107.0
size_flags_horizontal = 3
max_length = 12
placeholder_text = "36999"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Join" type="Button" parent="Login/PanelContainer/VBoxContainer"]
margin_top = 146.0
margin_right = 256.0
margin_bottom = 175.0
text = "Join!"
[connection signal="text_entered" from="GameWindow/HBoxContainer/Chat/VBoxContainer/LineEdit" to="GameWindow/HBoxContainer/Chat" method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="GameWindow/HBoxContainer/VBoxContainer/Info/GridContainer/Button" to="GameWindow/HBoxContainer/VBoxContainer/Info" method="_on_Button_pressed"]
[connection signal="pressed" from="GameWindow/HBoxContainer/VBoxContainer/Info/GridContainer/PlayMusic" to="GameWindow/HBoxContainer/VBoxContainer/Info" method="_on_PlayMusic_pressed"]
[connection signal="value_changed" from="GameWindow/HBoxContainer/VBoxContainer/Info/GridContainer/SoundsSlider" to="GameWindow/HBoxContainer/VBoxContainer/Info" method="_on_SoundsSlider_value_changed"]
[connection signal="value_changed" from="GameWindow/HBoxContainer/VBoxContainer/Info/GridContainer/MusicSlider" to="GameWindow/HBoxContainer/VBoxContainer/Info" method="_on_MusicSlider_value_changed"]
